--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -17,13 +17,13 @@ corner-radius = 15;
 frame-opacity = 0.0;
 
 # Set transparency
-inactive-opacity = 0.9;
-active-opacity = 1.0;
+inactive-opacity = 0.05;  # Adjusted for slightly more transparency
+active-opacity = 0.9;  # Active windows slightly transparent
 
-# Use GLX backend
+# Use GLX backend for better performance
 backend = "glx";
 
-# Enable VSync
+# Enable VSync for smoother transitions
 vsync = true;
 
 # Window specific settings
@@ -58,15 +58,8 @@ fullscreen-exclude = [
 ];
 
 # Blur settings
-blur: {
-  method = "dual_kawase";
-  strength = 4.5;
-  background = false;
-  background-frame = false;
-  background-fixed = false;
-}
-
-# Enable blur for transparent windows
+blur-method = "dual_kawase";
+blur-strength = 6.5;  # Increased blur strength for a more pronounced effect
 blur-background = true;
 blur-background-frame = true;
 blur-background-fixed = true;
@@ -79,7 +72,16 @@ blur-background-exclude = [
 ];
 
 # Specify the blur convolution kernel
-blur-kern = "3x3box";
+blur-kern = "5x5box";  # Adjusted kernel size for more refined blur
 
-# Dim inactive windows
+# Dim inactive windows slightly
 inactive-dim = 0.1;
+
+# Transparency rule for specific windows (e.g., terminals, code editors)
+opacity-rule = [
+    "85:class_g = 'URxvt'",    # URxvt terminal
+    "85:class_g = 'kitty'",    # Kitty terminal
+    "90:class_g = 'code'",     # VSCode
+    "90:class_g = 'firefox'"   # Firefox browser
+];
+
